Add Suya recipe. Change pictures to smaller size

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <h2>Try some of our recipes!</h2>
     <ul>
       <li><a href="recipes/jollof-rice.html"> Nigerian Jollof Rice</a></li>
+      <li><a href="recipes/suya.html"> Nigerian Kebab - Suya</a></li>
+      <li><a href="recipes/yamporrige.html"> Yam Porridge</a></li>
     </ul>
   </body>
 </html>
