Add Jollof rice and Yam porrige recipes. Add photo

--- a/recipes/jollof-rice.html
+++ b/recipes/jollof-rice.html
@@ -13,5 +13,92 @@
       src="/images/jollof.jpg"
       alt="A picture showing Nigerian Jollof rice with two pieces of chicken"
     />
+    <h2>What is Jollof Rice?</h2>
+    <p>
+      Jollof rice is a delicious royal dish originating in West Africa. It is a
+      rich and incredibly rich, aromatic, tasty West African one-pot Meal.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>For the Sauce</h3>
+    <ul>
+      <li>2 red bell pepper</li>
+      <li>2 habanero pepper <em>use less if you do not like it spicy</em></li>
+      <li>3 plum tomatoes</li>
+      <li>1 medium onion</li>
+      <li>A quarter or 0.25 cup of water</li>
+    </ul>
+    <h3>For the Jollof Rice</h3>
+    <ul>
+      <li>Half or 0.5 cup oil</li>
+      <li>1 medium onion <em>sliced</em></li>
+      <li>4 tbsp tomato paste</li>
+      <li>4 cloves garlic <em>finely minced</em></li>
+      <li>1 tbsp Ginger <em>grated</em></li>
+      <li>2 bay leaves</li>
+      <li>1 tbsp thyme</li>
+      <li>1 tbsp curry powder</li>
+      <li>1 tsp salt</li>
+      <li>1 tsp white or black pepper</li>
+      <li>1 tbsp chicken bouillon powder <em>or three cubes</em></li>
+      <li>4 cups od long grain rice <em>rinsed and drained</em></li>
+      <li>3-4 cups of chicken stock</li>
+      <li>1 large tomato <em> sliced</em></li>
+      <li>1 medium onion <em>sliced</em></li>
+      <li>2 tbsp butter <em>at room temperature - optional</em></li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+      <!-- ordered list -->
+      <li>
+        First, make the tomato-based sauce by blending together the red bell
+        peppers, tomatoes, onion, and scotch bonnet.
+      </li>
+      <li>
+        Heat the cooking oil in a large pan over medium heat, then add the diced
+        onions and let them cook for about 3 minutes or until they are soft.
+      </li>
+      <li>
+        Next, add the tomato paste and fry for about 5 minutes. Then stir in
+        garlic, ginger, and bay leaves—leave to cook for 2 more minutes.
+      </li>
+      <li>
+        Add the blended sauce and allow the pepper to cook until the water is
+        reduced and the sauce become thick —about 10 to 15 minutes.
+      </li>
+      <li>
+        Season with thyme, curry powder, bouillon cubes, salt, and pepper to
+        taste. Cook for another 2 to 5 minutes.
+      </li>
+      <li>
+        Add the rinsed rice to the sauce and stir until it is well coated with
+        the sauce. Then add the chicken stock, stir briefly, cover with a
+        tight-fitting lid, and bring to a quick boil over high heat.
+      </li>
+      <li>
+        Once it begins to boil—after about 3 to 5 minutes, reduce the heat
+        immediately to low and steam until the rice is done—about 30 minutes.
+      </li>
+      <li>
+        Add the butter, sliced tomato, and onions, stir together briefly and
+        turn off the heat. <br />
+        Cover it immediately so that the heat remaining in the rice can steam up
+        the vegetables a little.
+      </li>
+      <li>Serve with sweet fried plantains, roasted chicken, or salad.</li>
+    </ol>
+    <h3>Notes</h3>
+    <ul>
+      <li>
+        Remove the bay leaves once the rice is done. <br />
+        However, if you cannot find it, do not be tempted to dig through it
+        since over-stirring will cause the rice to break. <br />
+        Just leave it and remove it whenever you find it.
+      </li>
+    </ul>
+
+    <p>
+      Recipe Credit:
+      <a href="https://cheflolaskitchen.com/jollof-rice/"> Chef Lola</a>
+    </p>
   </body>
 </html>
