--- a/recipes/yamporrige.html
+++ b/recipes/yamporrige.html
@@ -13,5 +13,66 @@
       src="/images/yamporrige.jpg"
       alt="A picture showing Nigerian Yam porridge"
     />
+    <h2>What is Yam Porridge?</h2>
+    <p>
+      The Nigerian Yam pottage or Yam Porridge or Asaro is a very delicious Yam
+      recipe eaten by multiple tribes across Nigeria.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 medium Yam tuber</li>
+      <li>1 Red Bell Pepper</li>
+      <li>1 Large Tomato</li>
+      <li>1 Habanero Pepper</li>
+      <li>1 Large Onion <em>divided into two</em></li>
+      <li>3 cups of water</li>
+      <li>0.5 cup Palm Oil</li>
+      <li>2 tbsp crayfish</li>
+      <li>1 tsp salt</li>
+      <li>2 tsp chicken bouillon powder <em>or two cubes</em></li>
+      <li>
+        15 ounces Mackerel fish <em>or salmon, stockfish or dried fish</em>
+      </li>
+      <li>
+        Basil or parsley <em>or any leafy vegetable like spinach or kale</em>
+      </li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+      <li>
+        Peel and cut the Yam into medium-sized chunks. Rinse a couple of times
+        until the water is no longer cloudy. Set aside.
+      </li>
+      <li>Blend the bell pepper, habanero, tomato, and half onion..</li>
+      <li>
+        Put the yams inside a pot, and add the blended sauce, salt, bouillon
+        powder, and water. <br />
+        Cover and let it cook for 10 minutes on medium to high heat
+      </li>
+      <li>
+        Stir in the palm oil, sliced onions, and crayfish, cover, and leave to
+        cook for an additional 10 minutes.
+      </li>
+      <li>
+        Mash the yams with a potato masher or a wooden spoon. I love to mash
+        some yams and keep some chunks. It gives more texture!
+      </li>
+      <li>
+        Add the fish.
+        <em
+          >You can use whatever addition you prefer, like smoked fish or crab
+          meat</em
+        >.
+      </li>
+      <li>Allow it to simmer for an additional 3 to 5 minutes.</li>
+      <li>
+        Stir in the herbs like basil, or leafy greens like spinach, kale and
+        enjoy while still hot!
+      </li>
+    </ol>
+    <p>
+      Recipe Credit:
+      <a href="https://cheflolaskitchen.com/yam-porridge-pottage/">Chef Lola</a>
+    </p>
   </body>
 </html>
